🐛 broken style fixed

--- a/src/components/pages/blog/postContent/index.css
+++ b/src/components/pages/blog/postContent/index.css
@@ -80,6 +80,7 @@
   position: sticky;
   top: 100px;
   z-index: 1;
+  width: 100%;
   height: fit-content;
 
   &::after {
